# OnlineChat

./: Makefile  README.md  pyproject.toml  pytest.ini
src/: config.py  database.py  exceptions.py  main.py
src/chat/: dao.py  models.py  router.py
src/dao/: base.py
src/migration/: env.py
src/services/: chat.py  users.py
src/static/js/: app.js  auth.js
src/templates/: auth.html  index.html
src/users/: models.py  router.py
