[project]
name = "onlinechat"
version = "0.1.0"
description = "Онлайн чат на вебсокетах на фреймфорке Fastapi"
authors = [
    {name = "Dolewskiy IUriy",email = "dol3wsky@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "mypy (>=1.14.1,<2.0.0)",
    "autopep8 (>=2.3.1,<3.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
pydantic-settings = "^2.7.1"
jinja2 = "^3.1.5"
alembic = "^1.14.0"
websockets = "^14.1"
aiosqlite = "^0.20.0"
